--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "repository": "git@github.com:eth-infinitism/rip7560_contracts.git",
   "author": "Alex Forshtat <forshtat1@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "test-hardhat": "hardhat test",
+    "test-forge": "forge test",
+    "ci": "yarn test-hardhat && yarn test-forge"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
