--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
     "typescript": ">=4.5.0"
+  },
+  "dependencies": {
+    "@account-abstraction/contracts": "^0.7.0"
   }
 }
