--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test-hardhat": "hardhat test",
     "test-forge": "forge test",
-    "compile-hardhat": "npx hardhat compile",
+    "compile-hardhat": "npx hardhat compile --force",
     "ci": "yarn test-hardhat && yarn test-forge"
   },
   "devDependencies": {
